Tamaño titulos de la parte de seleccion div lado izq

--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@
     margin-top: 40px;
 }
 .ladoIzq .divOpciones .subtit{
-    font-size: x-large;
+    font-size: large;
     font-weight: bold;
     text-transform: uppercase;
 }
